gccida/c3/output_asm_insn
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3583:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3597:4: error: expected ';' after expression
rtx v33; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3597:5: error: use of undeclared identifier 'v33'
rtx v33; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3598:4: error: expected ';' after expression
rtx v34; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3598:5: error: use of undeclared identifier 'v34'
rtx v34; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3603:4: error: expected ';' after expression
rtx v39; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3603:5: error: use of undeclared identifier 'v39'
rtx v39; // rsi 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3604:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3604:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3606:4: error: expected ';' after expression
rtx v42; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3606:5: error: use of undeclared identifier 'v42'
rtx v42; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3612:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v48; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3621:4: error: expected ';' after expression
rtx paddressp[32]; // [rsp+30h] [rbp-1A8h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3621:5: error: use of undeclared identifier 'paddressp'
rtx paddressp[32]; // [rsp+30h] [rbp-1A8h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3632:14: error: use of undeclared identifier 'paddressp'
v4 = ( int *)paddressp; 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3662:16: error: use of undeclared identifier 'paddressp'
if ( !LODWORD( paddressp[0]) ) 
               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3682:1: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
insn_data_0[debug_insn[2].fld[0].rtint].name); 
^~~~~~~~~~~
insn_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3683:6: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( insn_data_0[rtint].n_alternatives >= 2 ) 
     ^~~~~~~~~~~
     insn_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/final.c:3716:7: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
v26 = sch_istable[( unsigned __int8)v10]; 
      ^~~~~~~~~~~
      _sch_istable
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_asm_insn/src/obj/final.o] Error 1
